# motion-motis-challenge

./: .gitignore  AGENTS.md  GEMINI.md  README.md  main.py  pyproject.toml  requirements.txt
debug/: README.md  test_transaction_primitives.py  transaction_primitives.py
docs/: DEVELOPMENT_GUIDELINES.md  final_assessment.md  overall_pr_plan.md  plan_task1.md  plan_task2.md  plan_task3.md  plan_task4.md  plan_task5.md  plan_task6.md
finguard-workspace/: .coverage  .gitignore  CLAUDE.md  bandit.yaml  classifier.db  classifier.db-shm  classifier.db-wal  justfile  main.py  mypy_output.txt  pyproject.toml
finguard-workspace/application-agents/classifier-agent/: .env.example  alembic.ini  app.py  classification_service.py  classifier.py  config.toml  conftest.py  db.py  models.py  pyproject.toml  test_classification.py  transaction_controller.py
finguard-workspace/application-agents/classifier-agent/src/alembic/: env.py
finguard-workspace/application-agents/classifier-agent/src/alembic/versions/: 31d3e817cac8_manual_migration_for_transaction_.py
finguard-workspace/application-agents/classifier-agent/src/classifier_agent/: __init__.py  app.py  config.py  database.py  models.py  settings.py
finguard-workspace/application-agents/classifier-agent/src/classifier_agent/controllers/: __init__.py  agent_controller.py  classify_controller.py
finguard-workspace/application-agents/classifier-agent/src/classifier_agent/graph/: __init__.py  agent_graph.py  messages.py  nodes.py  state.py  types.py  workflow.py
finguard-workspace/application-agents/classifier-agent/src/classifier_agent/resources/: __init__.py  checkpointer.py  database.py  db_service.py  http_client.py  llm_service.py  services.py
finguard-workspace/application-agents/classifier-agent/src/classifier_agent/schemas/: transactions.py
finguard-workspace/application-agents/classifier-agent/src/classifier_agent/services/: __init__.py  classification_service.py  llm_service.py
finguard-workspace/application-agents/classifier-agent/src/config/: base.toml  development.toml  production.toml  settings.toml  test.toml
finguard-workspace/application-agents/classifier-agent/tests/: conftest.py  test_classification.py  test_coverage.py  test_resources.py  test_services.py  test_transaction_engine.py  test_transactions.py
src/: main.py  models.py  router.py  service.py
src/code_challenge/: __init__.py  api.py  app.py  classifier.py  graph.py  resources.py  schemas.py  services.py
tests/: test_api.py  test_classifier.py  test_graph.py  test_services.py
