[project]
name = "finguard-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["application-agents/*", "packages/*"]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["F", "I", "ARG"]

[dependency-groups]
dev = [
	"mypy>=1.18.2",
	"pytest>=8.4.2",
	"pytest-asyncio>=1.2.0",
	"pytest-cov>=7.0.0",
	"ruff>=0.14.1",
]
prod = []
