[project]
name = "finguard-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["application-agents/*", "packages/*"]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["F", "I", "ARG"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
