[project]
name = "finguard-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "classifier-agent",
    "greenlet>=3.4.0",
    "langchain-core>=1.3.0",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

[tool.uv.workspace]
members = ["application-agents/*", "packages/*"]

[tool.uv.sources]
classifier-agent = { workspace = true }

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["F", "I", "ARG"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
