[project]
name = "classifier-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.27.2",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "transaction-engine",
    "tomli>=2.2.1; python_version<'3.11'",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
transaction-engine = { workspace = true }
