[project]
name = "classifier-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "transaction-engine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
transaction-engine = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/classifier_agent"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/transaction-engine/src"]
